--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <span class="drop" id="d5">E</span>
         <span class="drop" id="d6">T</span>
     </div>
+    <h1>project</h1>
+    
        
 </body>
 </html>
